fix : minor issues
